--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   .slides { position: absolute; inset: 0; }
   .slide { position: absolute; inset: 0; background-size: cover; background-position: center; opacity: 0; transform: scale(1.08); transition: opacity 1.2s ease, transform 8s linear; }
   .slide.active { opacity: 1; transform: scale(1); }
+  .slide img { position: absolute; inset: 0; width: 100%; height: 100%; object-fit: cover; }
   .hero-overlay { position: relative; z-index: 1; height: 100%; display: grid; place-items: center; padding: 20px; background: linear-gradient(to bottom, rgba(2,6,23,0.35), rgba(2,6,23,0.5)); }
   .hero-content { text-align: center; color: #fff; max-width: 900px; }
   .hero h1 { font-size: clamp(28px, 5vw, 54px); line-height: 1.1; margin: 0 0 12px; letter-spacing: .3px; }
@@ -200,11 +201,11 @@
         <h1>Products</h1>
         <div class="tiles" style="margin-top: 16px;">
           <a class="tile" href="#products-np">
-            <img src="https://images.unsplash.com/photo-1468261353590-0a71f3b166b3?q=80&w=1200&auto=format&fit=crop" alt="Non-Perishable">
+            <img src="https://images.unsplash.com/photo-1544025162-d76694265947?q=80&w=1200&auto=format&fit=crop" alt="Non-Perishable goods" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';">
             <div class="tile-info">Non-Perishable</div>
           </a>
           <a class="tile" href="#products-p">
-            <img src="https://images.unsplash.com/photo-1547514701-42782101795e?q=80&w=1200&auto=format&fit=crop" alt="Perishable">
+            <img src="https://images.unsplash.com/photo-1547514701-42782101795e?q=80&w=1200&auto=format&fit=crop" alt="Perishable onions" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';">
             <div class="tile-info">Perishable</div>
           </a>
         </div>
@@ -217,19 +218,19 @@
         <p class="muted">Export-grade grains, pulses, millets and edible oils. Private-label and bulk options available.</p>
         <div class="tiles" style="margin-top: 16px;">
           <a class="tile" href="#rice">
-            <img src="https://images.unsplash.com/photo-1468261353590-0a71f3b166b3?q=80&w=1200&auto=format&fit=crop" alt="Rice">
+            <img src="https://images.unsplash.com/photo-1544025162-d76694265947?q=80&w=1200&auto=format&fit=crop" alt="Rice sacks" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';">
             <div class="tile-info">Rice</div>
           </a>
           <a class="tile" href="#pulses">
-            <img src="https://images.unsplash.com/photo-1543339308-43f2b83f8664?q=80&w=1200&auto=format&fit=crop" alt="Pulses">
+            <img src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd?q=80&w=1200&auto=format&fit=crop" alt="Assorted pulses" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';">
             <div class="tile-info">Pulses</div>
           </a>
           <a class="tile" href="#millets">
-            <img src="https://images.unsplash.com/photo-1594051106446-89e74b01b394?q=80&w=1200&auto=format&fit=crop" alt="Millets">
+            <img src="https://images.unsplash.com/photo-1594051106446-89e74b01b394?q=80&w=1200&auto=format&fit=crop" alt="Millets" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';">
             <div class="tile-info">Millets</div>
           </a>
           <a class="tile" href="#oils">
-            <img src="https://images.unsplash.com/photo-1524592094714-0f0654e20314?q=80&w=1200&auto=format&fit=crop" alt="Edible Oils">
+            <img src="https://images.unsplash.com/photo-1515547179786-1fb2b3c2b6c4?q=80&w=1200&auto=format&fit=crop" alt="Edible oils" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';">
             <div class="tile-info">Edible Oils</div>
           </a>
         </div>
@@ -248,13 +249,13 @@
           </ul>
           <p class="muted">Suitable for retail chains, wholesalers & HORECA supply.</p>
         </div>
-        <div class="card"><img src="https://images.unsplash.com/photo-1544025162-d76694265947?q=80&w=1200&auto=format&fit=crop" alt="Rice sacks"></div>
+        <div class="card"><img src="https://images.unsplash.com/photo-1544025162-d76694265947?q=80&w=1200&auto=format&fit=crop" alt="Rice sacks" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';"></div>
       </div>
     </section>
 
     <section class="section" id="pulses" style="background: var(--bg-muted)">
       <div class="container grid" style="grid-template-columns: 1fr 1.2fr; align-items: center;">
-        <div class="card"><img src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd?q=80&w=1200&auto=format&fit=crop" alt="Assorted pulses"></div>
+        <div class="card"><img src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd?q=80&w=1200&auto=format&fit=crop" alt="Assorted pulses" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';"></div>
         <div>
           <h3>Pulses</h3>
           <p>Wholesome, protein-rich pulses sourced directly from trusted mills.</p>
@@ -283,13 +284,13 @@
           </ul>
           <p class="muted">Highly nutritious, gluten-free and used in cereals, snacks, bakery & wellness foods.</p>
         </div>
-        <div class="card"><img src="https://images.unsplash.com/photo-1594051106446-89e74b01b394?q=80&w=1200&auto=format&fit=crop" alt="Millets"></div>
+        <div class="card"><img src="https://images.unsplash.com/photo-1594051106446-89e74b01b394?q=80&w=1200&auto=format&fit=crop" alt="Millets" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';"></div>
       </div>
     </section>
 
     <section class="section" id="oils" style="background: var(--bg-muted)">
       <div class="container grid" style="grid-template-columns: 1fr 1.2fr; align-items: center;">
-        <div class="card"><img src="https://images.unsplash.com/photo-1524592094714-0f0654e20314?q=80&w=1200&auto=format&fit=crop" alt="Edible oils"></div>
+        <div class="card"><img src="https://images.unsplash.com/photo-1515547179786-1fb2b3c2b6c4?q=80&w=1200&auto=format&fit=crop" alt="Edible oils" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';"></div>
         <div>
           <h3>Edible Oils</h3>
           <p>Pure oils from certified mills.</p>
@@ -309,8 +310,8 @@
         <h3>Fresh Onions</h3>
         <p class="muted">High‑quality, hand‑sorted onions with strong flavor and long shelf life.</p>
         <div class="grid" style="grid-template-columns: 1fr 1fr;">
-          <div class="card"><img src="https://images.unsplash.com/photo-1547514701-42782101795e?q=80&w=1200&auto=format&fit=crop" alt="Red onions"></div>
-          <div class="card"><img src="https://images.unsplash.com/photo-1522184216315-dc2d01f4f837?q=80&w=1200&auto=format&fit=crop" alt="Onions on a table"></div>
+          <div class="card"><img src="https://images.unsplash.com/photo-1547514701-42782101795e?q=80&w=1200&auto=format&fit=crop" alt="Red onions" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';"></div>
+          <div class="card"><img src="https://images.unsplash.com/photo-1522184216315-dc2d01f4f837?q=80&w=1200&auto=format&fit=crop" alt="Onions on a table" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';"></div>
         </div>
       </div>
     </section>
@@ -425,16 +426,23 @@
     var slidesContainer = document.querySelector('.slides');
     if (!slidesContainer) return;
     var imageUrls = [
-      'https://images.unsplash.com/photo-1500937386664-56f3d086a7f7?q=80&w=1920&auto=format&fit=crop',
-      'https://images.unsplash.com/photo-1526312426976-593c2b999c1a?q=80&w=1920&auto=format&fit=crop',
-      'https://images.unsplash.com/photo-1501004318641-b39e6451bec6?q=80&w=1920&auto=format&fit=crop',
-      'https://images.unsplash.com/photo-1604908554049-9f3a106c8355?q=80&w=1920&auto=format&fit=crop',
-      'https://images.unsplash.com/photo-1552858725-26e6d4d2c910?q=80&w=1920&auto=format&fit=crop'
+      'https://images.unsplash.com/photo-1506806732259-39c2d0268443?q=80&w=1920&auto=format&fit=crop', // rice fields
+      'https://images.unsplash.com/photo-1552975084-6e0270b81c09?q=80&w=1920&auto=format&fit=crop', // shipping containers at port
+      'https://images.unsplash.com/photo-1512621776951-a57141f2eefd?q=80&w=1920&auto=format&fit=crop', // pulses
+      'https://images.unsplash.com/photo-1547514701-42782101795e?q=80&w=1920&auto=format&fit=crop', // onions
+      'https://images.unsplash.com/photo-1515547179786-1fb2b3c2b6c4?q=80&w=1920&auto=format&fit=crop'  // oil
     ];
     imageUrls.forEach(function (url, index) {
       var slide = document.createElement('div');
       slide.className = 'slide' + (index === 0 ? ' active' : '');
-      slide.style.backgroundImage = 'url("' + url + '")';
+      var img = document.createElement('img');
+      img.src = url;
+      img.alt = 'Hero slide image';
+      img.decoding = 'async';
+      img.loading = 'eager';
+      img.setAttribute('referrerpolicy', 'no-referrer');
+      img.onerror = function(){ this.onerror=null; this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=='; };
+      slide.appendChild(img);
       slidesContainer.appendChild(slide);
     });
     var slides = Array.prototype.slice.call(document.querySelectorAll('.slide'));
