Update print statement from 'Hello' to 'Goodbye'
ok

--- a/index.html
+++ b/index.html
@@ -201,11 +201,11 @@
         <h1>Products</h1>
         <div class="tiles" style="margin-top: 16px;">
           <a class="tile" href="#products-np">
-            <img src="https://images.unsplash.com/photo-1542831371-29b0f74f9713?q=80&w=1200&auto=format&fit=crop" alt="Warehouse pallets of grains" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';">
+            <img src="conatiner.jpg!w700wp" alt="Warehouse pallets of grains" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='farm.jpg';">
             <div class="tile-info">Non-Perishable</div>
           </a>
           <a class="tile" href="#products-p">
-            <img src="https://images.unsplash.com/photo-1587731556938-38755b4803be?q=80&w=1200&auto=format&fit=crop" alt="Fresh onions in crates" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';">
+            <img src="onion.webp" alt="Fresh onions in crates" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='farm-2.jpg';">
             <div class="tile-info">Perishable</div>
           </a>
         </div>
@@ -218,19 +218,19 @@
         <p class="muted">Export-grade grains, pulses, millets and edible oils. Private-label and bulk options available.</p>
         <div class="tiles" style="margin-top: 16px;">
           <a class="tile" href="#rice">
-            <img src="https://images.unsplash.com/photo-1596040033229-ff5f4f1b6a83?q=80&w=1200&auto=format&fit=crop" alt="Raw rice grains in sack" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';">
+            <img src="rice.jpg" alt="Raw rice grains in sack" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='farm.jpg';">
             <div class="tile-info">Rice</div>
           </a>
           <a class="tile" href="#pulses">
-            <img src="https://images.unsplash.com/photo-1589923188900-85dae523342b?q=80&w=1200&auto=format&fit=crop" alt="Assorted raw pulses in sacks" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';">
+            <img src="farm.jpg" alt="Assorted raw pulses (representative farm image)" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='farm-2.jpg';">
             <div class="tile-info">Pulses</div>
           </a>
           <a class="tile" href="#millets">
-            <img src="https://images.unsplash.com/photo-1505577044097-6a0b0a1a3a50?q=80&w=1200&auto=format&fit=crop" alt="Millet grains and ears" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';">
+            <img src="farm-2.jpg" alt="Millet fields (representative farm image)" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='farm.jpg';">
             <div class="tile-info">Millets</div>
           </a>
           <a class="tile" href="#oils">
-            <img src="https://images.unsplash.com/photo-1583511655857-d19b40a7a54e?q=80&w=1200&auto=format&fit=crop" alt="Bottled edible oils in factory" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';">
+            <img src="conatiner 2.jpg" alt="Edible oil logistics (representative container image)" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='conatiner.jpg!w700wp';">
             <div class="tile-info">Edible Oils</div>
           </a>
         </div>
@@ -249,13 +249,13 @@
           </ul>
           <p class="muted">Suitable for retail chains, wholesalers & HORECA supply.</p>
         </div>
-        <div class="card"><img src="https://images.unsplash.com/photo-1596040033229-ff5f4f1b6a83?q=80&w=1200&auto=format&fit=crop" alt="Raw rice grains in sack" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';"></div>
+        <div class="card"><img src="rice.jpg" alt="Raw rice grains in sack" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='farm.jpg';"></div>
       </div>
     </section>
 
     <section class="section" id="pulses" style="background: var(--bg-muted)">
       <div class="container grid" style="grid-template-columns: 1fr 1.2fr; align-items: center;">
-        <div class="card"><img src="https://images.unsplash.com/photo-1589923188900-85dae523342b?q=80&w=1200&auto=format&fit=crop" alt="Assorted raw pulses in sacks" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';"></div>
+        <div class="card"><img src="farm.jpg" alt="Assorted pulses (representative farm image)" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='farm-2.jpg';"></div>
         <div>
           <h3>Pulses</h3>
           <p>Wholesome, protein-rich pulses sourced directly from trusted mills.</p>
@@ -284,13 +284,13 @@
           </ul>
           <p class="muted">Highly nutritious, gluten-free and used in cereals, snacks, bakery & wellness foods.</p>
         </div>
-        <div class="card"><img src="https://images.unsplash.com/photo-1505577044097-6a0b0a1a3a50?q=80&w=1200&auto=format&fit=crop" alt="Millet grains and ears" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';"></div>
+        <div class="card"><img src="farm-2.jpg" alt="Millet fields (representative farm image)" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='farm.jpg';"></div>
       </div>
     </section>
 
     <section class="section" id="oils" style="background: var(--bg-muted)">
       <div class="container grid" style="grid-template-columns: 1fr 1.2fr; align-items: center;">
-        <div class="card"><img src="https://images.unsplash.com/photo-1583511655857-d19b40a7a54e?q=80&w=1200&auto=format&fit=crop" alt="Bottled edible oils in factory" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';"></div>
+        <div class="card"><img src="conatiner 2.jpg" alt="Bottled edible oils logistics (representative container image)" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='conatiner.jpg!w700wp';"></div>
         <div>
           <h3>Edible Oils</h3>
           <p>Pure oils from certified mills.</p>
@@ -310,8 +310,8 @@
         <h3>Fresh Onions</h3>
         <p class="muted">High‑quality, hand‑sorted onions with strong flavor and long shelf life.</p>
         <div class="grid" style="grid-template-columns: 1fr 1fr;">
-          <div class="card"><img src="https://images.unsplash.com/photo-1587731556938-38755b4803be?q=80&w=1200&auto=format&fit=crop" alt="Fresh red onions in crates" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';"></div>
-          <div class="card"><img src="https://images.unsplash.com/photo-1615485737651-d8b10956a68b?q=80&w=1200&auto=format&fit=crop" alt="Onions harvested in field" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';"></div>
+          <div class="card"><img src="onion.webp" alt="Fresh red onions" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='farm.jpg';"></div>
+          <div class="card"><img src="farm-2.jpg" alt="Onion harvest field" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='farm.jpg';"></div>
         </div>
       </div>
     </section>
@@ -394,43 +394,43 @@
         <p class="muted">A closer look at our commodities and logistics in motion.</p>
         <div class="tiles" style="margin-top: 16px;">
           <div class="tile">
-            <img src="https://images.unsplash.com/photo-1529074963764-98f45c47344b?q=80&w=1200&auto=format&fit=crop" alt="Shipping containers at port" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';">
+            <img src="conatiner.jpg!w700wp" alt="Shipping containers at port" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='conatiner 2.jpg';">
             <div class="tile-info">Containers at Port</div>
           </div>
           <div class="tile">
-            <img src="https://images.unsplash.com/photo-1516426122078-c23e76319801?q=80&w=1200&auto=format&fit=crop" alt="Cargo ship cruising at sea" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';">
-            <div class="tile-info">Cargo Ship at Sea</div>
+            <img src="conatiner 2.jpg" alt="Cargo ship cruising at sea (representative)" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='conatiner.jpg!w700wp';">
+            <div class="tile-info">Cargo Ship</div>
           </div>
           <div class="tile">
-            <img src="https://images.unsplash.com/photo-1596040033229-ff5f4f1b6a83?q=80&w=1200&auto=format&fit=crop" alt="Raw basmati rice grains" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';">
+            <img src="rice.jpg" alt="Raw basmati rice grains" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='farm.jpg';">
             <div class="tile-info">Rice</div>
           </div>
           <div class="tile">
-            <img src="https://images.unsplash.com/photo-1587731556938-38755b4803be?q=80&w=1200&auto=format&fit=crop" alt="Fresh onions in crates" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';">
+            <img src="onion.webp" alt="Fresh onions" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='farm-2.jpg';">
             <div class="tile-info">Onions</div>
           </div>
           <div class="tile">
-            <img src="https://images.unsplash.com/photo-1589923188900-85dae523342b?q=80&w=1200&auto=format&fit=crop" alt="Yellow split peas resembling Toor dal" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';">
-            <div class="tile-info">Toor (Split Pigeon Pea)</div>
+            <img src="farm.jpg" alt="Toor (representative pulses image)" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='farm-2.jpg';">
+            <div class="tile-info">Toor</div>
           </div>
           <div class="tile">
-            <img src="https://images.unsplash.com/photo-1584270354949-1f1b9e3f96e9?q=80&w=1200&auto=format&fit=crop" alt="Dried chickpeas (Chana)" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';">
-            <div class="tile-info">Chana (Chickpeas)</div>
+            <img src="farm-2.jpg" alt="Chana (representative pulses image)" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='farm.jpg';">
+            <div class="tile-info">Chana</div>
           </div>
           <div class="tile">
-            <img src="https://images.unsplash.com/photo-1576181069367-7f6b9bcb35d9?q=80&w=1200&auto=format&fit=crop" alt="Black gram (Urad) seeds" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';">
-            <div class="tile-info">Urad (Black Gram)</div>
+            <img src="farm.jpg" alt="Urad (representative pulses image)" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='farm-2.jpg';">
+            <div class="tile-info">Urad</div>
           </div>
           <div class="tile">
-            <img src="https://images.unsplash.com/photo-1615485737965-6a1ffafbd6eb?q=80&w=1200&auto=format&fit=crop" alt="Green gram (Moong)" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';">
-            <div class="tile-info">Moong (Green Gram)</div>
+            <img src="farm-2.jpg" alt="Moong (representative pulses image)" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='farm.jpg';">
+            <div class="tile-info">Moong</div>
           </div>
           <div class="tile">
-            <img src="https://images.unsplash.com/photo-1604908819300-94d55bdac559?q=80&w=1200&auto=format&fit=crop" alt="Red lentils (Masoor)" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';">
-            <div class="tile-info">Masoor (Red Lentils)</div>
+            <img src="farm.jpg" alt="Masoor (representative pulses image)" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='farm-2.jpg';">
+            <div class="tile-info">Masoor</div>
           </div>
           <div class="tile">
-            <img src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?q=80&w=1200&auto=format&fit=crop" alt="Farm field with tractor" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==';">
+            <img src="farm-2.jpg" alt="Farm field with tractor" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='farm.jpg';">
             <div class="tile-info">Farm Field</div>
           </div>
         </div>
@@ -475,12 +475,12 @@
     var slidesContainer = document.querySelector('.slides');
     if (!slidesContainer) return;
     var imageUrls = [
-      'https://images.unsplash.com/photo-1506806732259-39c2d0268443?q=80&w=1920&auto=format&fit=crop', // rice fields
-      'https://images.unsplash.com/photo-1529074963764-98f45c47344b?q=80&w=1920&auto=format&fit=crop', // containers port
-      'https://images.unsplash.com/photo-1516426122078-c23e76319801?q=80&w=1920&auto=format&fit=crop', // cargo ship at sea
-      'https://images.unsplash.com/photo-1592595896551-12b371d546d4?q=80&w=1920&auto=format&fit=crop', // warehouse sacks
-      'https://images.unsplash.com/photo-1615485737651-d8b10956a68b?q=80&w=1920&auto=format&fit=crop', // onion harvest
-      'https://images.unsplash.com/photo-1559622214-f8a9850965a8?q=80&w=1920&auto=format&fit=crop'  // oil bottles
+      'conatiner.jpg!w700wp',
+      'conatiner 2.jpg',
+      'farm.jpg',
+      'farm-2.jpg',
+      'rice.jpg',
+      'onion.webp'
     ];
     imageUrls.forEach(function (url, index) {
       var slide = document.createElement('div');
