Update print statement from 'Hello' to 'Goodbye'
okkk

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <h1>Products</h1>
         <div class="tiles" style="margin-top: 16px;">
           <a class="tile" href="#products-np">
-            <img src="conatiner.jpg!w700wp" alt="Warehouse pallets of grains" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='farm.jpg';">
+            <img src="conatiner.jpg%21w700wp" alt="Warehouse pallets of grains" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='farm.jpg';">
             <div class="tile-info">Non-Perishable</div>
           </a>
           <a class="tile" href="#products-p">
@@ -230,7 +230,7 @@
             <div class="tile-info">Millets</div>
           </a>
           <a class="tile" href="#oils">
-            <img src="conatiner 2.jpg" alt="Edible oil logistics (representative container image)" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='conatiner.jpg!w700wp';">
+            <img src="conatiner%202.jpg" alt="Edible oil logistics (representative container image)" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='conatiner.jpg%21w700wp';">
             <div class="tile-info">Edible Oils</div>
           </a>
         </div>
@@ -290,7 +290,7 @@
 
     <section class="section" id="oils" style="background: var(--bg-muted)">
       <div class="container grid" style="grid-template-columns: 1fr 1.2fr; align-items: center;">
-        <div class="card"><img src="conatiner 2.jpg" alt="Bottled edible oils logistics (representative container image)" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='conatiner.jpg!w700wp';"></div>
+        <div class="card"><img src="conatiner%202.jpg" alt="Bottled edible oils logistics (representative container image)" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='conatiner.jpg%21w700wp';"></div>
         <div>
           <h3>Edible Oils</h3>
           <p>Pure oils from certified mills.</p>
@@ -394,11 +394,11 @@
         <p class="muted">A closer look at our commodities and logistics in motion.</p>
         <div class="tiles" style="margin-top: 16px;">
           <div class="tile">
-            <img src="conatiner.jpg!w700wp" alt="Shipping containers at port" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='conatiner 2.jpg';">
+            <img src="conatiner.jpg%21w700wp" alt="Shipping containers at port" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='conatiner%202.jpg';">
             <div class="tile-info">Containers at Port</div>
           </div>
           <div class="tile">
-            <img src="conatiner 2.jpg" alt="Cargo ship cruising at sea (representative)" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='conatiner.jpg!w700wp';">
+            <img src="conatiner%202.jpg" alt="Cargo ship cruising at sea (representative)" loading="lazy" decoding="async" onerror="this.onerror=null;this.src='conatiner.jpg%21w700wp';">
             <div class="tile-info">Cargo Ship</div>
           </div>
           <div class="tile">
@@ -475,8 +475,8 @@
     var slidesContainer = document.querySelector('.slides');
     if (!slidesContainer) return;
     var imageUrls = [
-      'conatiner.jpg!w700wp',
-      'conatiner 2.jpg',
+      'conatiner.jpg%21w700wp',
+      'conatiner%202.jpg',
       'farm.jpg',
       'farm-2.jpg',
       'rice.jpg',
